Dark theme implemented. Alert dialogs implemented and added. Faster and better repayment calculation implemented.

--- a/app/src/main/res/layout/fragment_subscription_list.xml
+++ b/app/src/main/res/layout/fragment_subscription_list.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.fragments.SubscriptionListFragment">
+    tools:context=".ui.fragments.SubscriptionListFragment"
+    android:background="?attr/backgroundcolor">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -12,9 +13,10 @@
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbarSubList"
             android:layout_width="0dp"
-            app:titleTextColor="@android:color/white"
-            android:background="@color/colorPrimary"
+            app:titleTextColor="?attr/toolbartextcolor"
+            android:background="?attr/toolbarcolor"
             android:layout_height="?attr/actionBarSize"
+            android:elevation="6dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
