--- a/app/src/main/res/layout/fragment_subscription.xml
+++ b/app/src/main/res/layout/fragment_subscription.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.fragments.SubscriptionFragment">
+    tools:context=".ui.fragments.SubscriptionFragment"
+    android:background="?attr/backgroundcolor">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -21,6 +22,7 @@
                 android:layout_marginStart="2dp"
                 android:text="- optional"
                 android:textSize="16sp"
+                android:textColor="?attr/textcolor"
                 app:layout_constraintBottom_toBottomOf="@+id/textView8"
                 app:layout_constraintStart_toEndOf="@+id/textView8"
                 app:layout_constraintTop_toTopOf="@+id/textView8" />
@@ -29,6 +31,10 @@
                 android:id="@+id/cardView2"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
+                android:layout_marginStart="4dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginEnd="4dp"
+                app:cardBackgroundColor="?attr/cardbackground"
                 app:layout_constraintBottom_toTopOf="@+id/guideline"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -45,8 +51,8 @@
                         android:layout_marginStart="8dp"
                         android:layout_marginTop="8dp"
                         android:src="@drawable/ic_clear_black_24dp"
-                        android:tint="@color/White"
-                        app:backgroundTint="@color/colorPrimary"
+                        android:tint="?attr/fabTint"
+                        app:backgroundTint="?attr/fabBackgroundTint"
                         app:fabSize="auto"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -58,8 +64,8 @@
                         android:layout_marginTop="8dp"
                         android:layout_marginEnd="8dp"
                         android:src="@drawable/ic_save_black_24dp"
-                        android:tint="@color/White"
-                        app:backgroundTint="@color/colorPrimary"
+                        android:tint="?attr/fabTint"
+                        app:backgroundTint="?attr/fabBackgroundTint"
                         app:fabSize="auto"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -77,6 +83,8 @@
                         android:maxLength="10"
                         android:maxLines="1"
                         android:textAlignment="center"
+                        android:textColor="?attr/edittextcolor"
+                        android:textColorHint="?attr/hintcolor"
                         android:textSize="24sp"
                         android:textStyle="bold"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -89,6 +97,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="4dp"
+                        android:backgroundTint="@color/Black"
+                        android:spinnerMode="dropdown"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/priceText" />
@@ -98,6 +108,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="4dp"
+                        android:textColor="?attr/edittextcolor"
                         android:visibility="gone"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -109,10 +120,9 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
                         android:layout_marginEnd="8dp"
-                        android:clickable="true"
                         android:src="@drawable/ic_delete_black_24dp"
-                        android:tint="@color/White"
-                        app:backgroundTint="@color/colorPrimary"
+                        android:tint="?attr/fabTint"
+                        app:backgroundTint="?attr/fabBackgroundTint"
                         app:layout_constraintEnd_toStartOf="@+id/saveFab"
                         app:layout_constraintTop_toTopOf="parent" />
 
@@ -135,6 +145,7 @@
                 android:text="Name"
                 android:textSize="16sp"
                 android:textStyle="bold"
+                android:textColor="?attr/textcolor"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/cardView2" />
 
@@ -150,6 +161,8 @@
                 android:inputType="textPersonName"
                 android:maxLines="1"
                 android:padding="8dp"
+                android:textColor="?attr/edittextcolor"
+                android:textColorHint="?attr/hintcolor"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/textView2"
                 app:layout_constraintTop_toBottomOf="@+id/textView2" />
@@ -162,6 +175,7 @@
                 android:text="Description"
                 android:textSize="16sp"
                 android:textStyle="bold"
+                android:textColor="?attr/textcolor"
                 app:layout_constraintStart_toStartOf="@+id/textView2"
                 app:layout_constraintTop_toBottomOf="@+id/nameText" />
 
@@ -172,6 +186,7 @@
                 android:layout_marginStart="2dp"
                 android:text="- optional"
                 android:textSize="16sp"
+                android:textColor="?attr/textcolor"
                 app:layout_constraintBottom_toBottomOf="@+id/textView3"
                 app:layout_constraintStart_toEndOf="@+id/textView3"
                 app:layout_constraintTop_toTopOf="@+id/textView3" />
@@ -188,6 +203,8 @@
                 android:inputType="textShortMessage"
                 android:maxLines="1"
                 android:padding="8dp"
+                android:textColor="?attr/edittextcolor"
+                android:textColorHint="?attr/hintcolor"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/textView3"
                 app:layout_constraintTop_toBottomOf="@+id/textView3" />
@@ -206,6 +223,7 @@
                 android:layout_height="wrap_content"
                 android:text="Every"
                 android:textSize="18sp"
+                android:textColor="?attr/textcolor"
                 app:layout_constraintBottom_toBottomOf="@+id/frequencyText"
                 app:layout_constraintStart_toStartOf="@+id/textView2"
                 app:layout_constraintTop_toTopOf="@+id/frequencyText" />
@@ -220,6 +238,8 @@
                 android:inputType="numberSigned"
                 android:maxLines="1"
                 android:padding="8dp"
+                android:textColor="?attr/edittextcolor"
+                android:textColorHint="?attr/hintcolor"
                 app:layout_constraintStart_toEndOf="@+id/textView5"
                 app:layout_constraintTop_toBottomOf="@+id/view" />
 
@@ -229,6 +249,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
+                android:backgroundTint="?attr/spinnertint"
                 app:layout_constraintBottom_toBottomOf="@+id/frequencyText"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/frequencyText"
@@ -242,6 +263,7 @@
                 android:layout_marginEnd="8dp"
                 android:textSize="18sp"
                 android:visibility="gone"
+                android:textColor="?attr/textcolor"
                 app:layout_constraintBottom_toBottomOf="@+id/frequencyText"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/frequencyText"
@@ -255,6 +277,7 @@
                 android:text="First Upcoming Payment"
                 android:textSize="16sp"
                 android:textStyle="bold"
+                android:textColor="?attr/textcolor"
                 app:layout_constraintStart_toStartOf="@+id/textView2"
                 app:layout_constraintTop_toBottomOf="@+id/frequencyText" />
 
@@ -272,6 +295,8 @@
                 android:inputType="date"
                 android:maxLines="1"
                 android:padding="8dp"
+                android:textColor="?attr/edittextcolor"
+                android:textColorHint="?attr/hintcolor"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/textView6"
                 app:layout_constraintTop_toBottomOf="@+id/textView6" />
@@ -292,21 +317,32 @@
                 android:text="Pick a Color"
                 android:textSize="16sp"
                 android:textStyle="bold"
+                android:textColor="?attr/textcolor"
                 app:layout_constraintStart_toStartOf="@+id/textView2"
                 app:layout_constraintTop_toBottomOf="@+id/view2" />
 
             <androidx.cardview.widget.CardView
-                android:id="@+id/colorPicker"
+                android:id="@+id/cardOuterPicker"
                 android:layout_width="0dp"
                 android:layout_height="40dp"
                 android:layout_marginTop="4dp"
                 android:layout_marginEnd="8dp"
-                android:focusable="false"
-                app:cardBackgroundColor="@color/DarkViolet"
-                app:cardElevation="2dp"
+                app:cardBackgroundColor="?attr/textcolor"
+                app:cardCornerRadius="6dp"
+                app:cardElevation="0dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/textView7"
-                app:layout_constraintTop_toBottomOf="@+id/textView7" />
+                app:layout_constraintTop_toBottomOf="@+id/textView7" >
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/colorPicker"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="2dp"
+                    android:focusable="false"
+                    app:cardCornerRadius="6dp"
+                    app:cardBackgroundColor="@color/DarkViolet"
+                    app:cardElevation="0dp"/>
+            </androidx.cardview.widget.CardView>
 
             <TextView
                 android:id="@+id/textView8"
@@ -316,8 +352,9 @@
                 android:text="Payment Method"
                 android:textSize="16sp"
                 android:textStyle="bold"
+                android:textColor="?attr/textcolor"
                 app:layout_constraintStart_toStartOf="@+id/textView2"
-                app:layout_constraintTop_toBottomOf="@+id/colorPicker" />
+                app:layout_constraintTop_toBottomOf="@+id/cardOuterPicker" />
 
             <EditText
                 android:id="@+id/paymentMethodText"
@@ -332,6 +369,8 @@
                 android:inputType="textShortMessage"
                 android:maxLines="1"
                 android:padding="8dp"
+                android:textColor="?attr/edittextcolor"
+                android:textColorHint="?attr/hintcolor"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/textView8"
