--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,43 @@
 <resources>
 
-    <!-- Base application theme. -->
+    <!-- Light/Day Mode theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorPrimary">@color/White</item>
+        <item name="colorPrimaryDark">@color/White</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="backgroundcolor">@color/White</item>
+        <item name="cardbackground">@color/White</item>
+        <item name="textcolor">@color/Black</item>
+        <item name="fabTint">@color/White</item>
+        <item name="fabBackgroundTint">@color/Black</item>
+        <item name="hintcolor">@color/Gray</item>
+        <item name="toolbarcolor">@color/White</item>
+        <item name="toolbartextcolor">@color/Black</item>
+        <item name="spinnertint">@color/Black</item>
+        <item name="edittextcolor">@color/Black</item>
+        <item name="android:windowAnimationStyle">@style/WindowsAnimationTransition</item>
     </style>
 
+    <!-- Night/Dark Mode theme. -->
+    <style name="DarkTheme" parent="Theme.AppCompat.NoActionBar">
+        <item name="colorPrimary">@color/Black</item>
+        <item name="colorPrimaryDark">@color/Black</item>
+        <item name="colorAccent">@color/Black</item>
+        <item name="backgroundcolor">@color/Black</item>
+        <item name="cardbackground">@color/White</item>
+        <item name="textcolor">@color/White</item>
+        <item name="fabTint">@color/Black</item>
+        <item name="fabBackgroundTint">@color/Yellow</item>
+        <item name="hintcolor">@color/Gray</item>
+        <item name="toolbarcolor">@color/Black</item>
+        <item name="toolbartextcolor">@color/White</item>
+        <item name="spinnertint">@color/White</item>
+        <item name="edittextcolor">@color/Black</item>
+        <item name="android:windowAnimationStyle">@style/WindowsAnimationTransition</item>
+    </style>
+
+    <style name="WindowsAnimationTransition">
+        <item name="android:windowEnterAnimation">@android:anim/fade_in</item>
+        <item name="android:windowExitAnimation">@android:anim/fade_out</item>
+    </style>
 </resources>
