Bottom App Bar implemented and toolbar removed. Fabs removed and menus moved inside of the bottom app bar.

--- a/app/src/main/res/layout/fragment_subscription_list.xml
+++ b/app/src/main/res/layout/fragment_subscription_list.xml
@@ -1,35 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.fragments.SubscriptionListFragment"
     android:background="?attr/backgroundcolor">
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/subscriptionsRV"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbarSubList"
-            android:layout_width="0dp"
-            app:titleTextColor="?attr/toolbartextcolor"
-            android:background="?attr/toolbarcolor"
-            android:layout_height="?attr/actionBarSize"
-            android:elevation="6dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/subscriptionsRV"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/toolbarSubList" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_height="match_parent"
+        android:clipToPadding="false"
+        android:paddingBottom="?attr/actionBarSize" />
 
     <include
         android:id="@+id/progressbarLayout"
@@ -37,4 +20,4 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="gone"/>
-</FrameLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
