--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.coordinatorlayout.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -14,5 +14,25 @@
         android:layout_height="match_parent"
         app:defaultNavHost="true"
         app:navGraph="@navigation/main_nav_graph"/>
+    <com.google.android.material.bottomappbar.BottomAppBar
+        android:theme="@style/Theme.MaterialComponents"
+        android:id="@+id/bottomAppBar"
+        app:fabAlignmentMode="center"
+        app:fabAnimationMode="slide"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:layout_gravity="bottom"
+        app:navigationIcon="@drawable/ic_dehaze_black_24dp"
+        app:backgroundTint="@color/DarkBlue"/>
 
-</LinearLayout>
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/addFab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_anchor="@id/bottomAppBar"
+        app:fabSize="normal"
+        android:tint="@color/White"
+        android:src="@drawable/ic_add_black_24dp"
+        app:backgroundTint="#f64f59" />
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
