--- a/app/src/main/res/layout/cell_subscriptions.xml
+++ b/app/src/main/res/layout/cell_subscriptions.xml
@@ -16,9 +16,10 @@
         android:id="@+id/subscriptionCard"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
             <TextView
                 android:id="@+id/nameText"
@@ -28,11 +29,11 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="2dp"
                 android:layout_marginBottom="16dp"
+                android:ellipsize="end"
+                android:maxLines="1"
                 android:text="Name"
                 android:textSize="16sp"
                 android:textStyle="bold"
-                android:maxLines="1"
-                android:ellipsize="end"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/priceText"
                 app:layout_constraintHorizontal_weight="15"
@@ -45,11 +46,11 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="2dp"
                 android:layout_marginEnd="4dp"
+                android:ellipsize="end"
+                android:maxLines="1"
                 android:text="100 ₺"
                 android:textAlignment="center"
                 android:textSize="16sp"
-                android:maxLines="1"
-                android:ellipsize="end"
                 app:layout_constraintBottom_toBottomOf="@+id/nameText"
                 app:layout_constraintEnd_toStartOf="@+id/constraintLayout"
                 app:layout_constraintHorizontal_weight="5"
