--- a/app/src/main/res/layout/navigation_bottom_sheet.xml
+++ b/app/src/main/res/layout/navigation_bottom_sheet.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:layout_behavior="@string/bottom_sheet_behavior"
-    android:background="?attr/backgroundcolor">
+    android:background="?attr/sheetbackgroundcolor">
 
     <TextView
         android:layout_width="match_parent"
