--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -143,5 +143,7 @@
     <color name="MediumBlue">#0000CD</color>
     <color name="DarkBlue">#00008B</color>
     <color name="Navy">#000080</color>
+    <color name="SoftBlack">#212121</color>
+    <color name="AlternativeBlack">#020301</color>
     <color name="Black">#000000</color>
 </resources>
