--- a/app/src/main/res/layout/cell_subscriptions.xml
+++ b/app/src/main/res/layout/cell_subscriptions.xml
@@ -49,7 +49,7 @@
                 android:ellipsize="end"
                 android:maxLines="1"
                 android:text="100 ₺"
-                android:textAlignment="center"
+                android:textAlignment="viewEnd"
                 android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="@+id/nameText"
                 app:layout_constraintEnd_toStartOf="@+id/constraintLayout"
