--- a/app/src/main/res/layout/fragment_subscription.xml
+++ b/app/src/main/res/layout/fragment_subscription.xml
@@ -239,7 +239,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:text="First Upcoming Payment"
+                android:text="Upcoming Payment"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:textColor="?attr/textcolor"
