--- a/app/src/main/res/layout/currency_spinner_row.xml
+++ b/app/src/main/res/layout/currency_spinner_row.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
+    android:id="@+id/spinnerRowBackground"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="?attr/backgroundcolor"
+    android:orientation="vertical"
     android:padding="2dp">
 
     <ImageView
@@ -23,8 +22,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
+        android:textColor="@color/Black"
         android:textSize="12sp"
-        android:textColor="?attr/textcolor"
         app:layout_constraintBottom_toBottomOf="@+id/flagImage"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/flagImage"
