--- a/app/src/main/res/layout/fragment_subscription.xml
+++ b/app/src/main/res/layout/fragment_subscription.xml
@@ -254,7 +254,7 @@
                 android:layout_marginEnd="8dp"
                 android:background="@drawable/rounded_edittext"
                 android:ems="10"
-                android:enabled="false"
+                android:enabled="true"
                 android:focusable="false"
                 android:hint="e.g. September 1, 2019"
                 android:inputType="date"
