--- a/app/src/main/res/layout/fragment_subscription_view.xml
+++ b/app/src/main/res/layout/fragment_subscription_view.xml
@@ -104,8 +104,12 @@
                 android:id="@+id/view"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
+                android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:background="@android:color/black"
+                android:layout_marginEnd="8dp"
+                android:background="?attr/textcolor"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/cardView2" />
 
             <TextView
