--- a/app/src/main/res/layout/navigation_bottom_sheet.xml
+++ b/app/src/main/res/layout/navigation_bottom_sheet.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -33,8 +34,7 @@
             android:layout_width="48dp"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_brightness_6_black_24dp"
-            android:tint="?attr/textcolor"
-            />
+            android:tint="?attr/textcolor" />
 
         <TextView
             android:id="@+id/themeChangerText"
@@ -67,6 +67,33 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/updateExchangeSheet"
+        android:layout_width="match_parent"
+        android:layout_height="56dp"
+        android:background="?attr/selectableItemBackground"
+        android:clickable="true"
+        android:focusable="true"
+        android:gravity="center_vertical">
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="48dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="12dp"
+            android:src="@drawable/ic_exchange"
+            android:tint="?attr/textcolor" />
+
+        <TextView
+            android:id="@+id/exchangeSheetText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:text="Exchage Rates"
+            android:textColor="?attr/textcolor"
+            android:textSize="16sp" />
+    </LinearLayout>
+
+    <LinearLayout
         android:id="@+id/deleteAllSheet"
         android:layout_width="match_parent"
         android:layout_height="56dp"
@@ -80,8 +107,8 @@
             android:layout_width="48dp"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_delete_black_24dp"
-            android:tint="?attr/textcolor"
-            />
+            android:tint="?attr/textcolor" />
+
         <TextView
             android:layout_marginStart="16dp"
             android:layout_width="match_parent"
