--- a/app/src/main/res/layout/cell_subscriptions.xml
+++ b/app/src/main/res/layout/cell_subscriptions.xml
@@ -25,14 +25,14 @@
                 android:id="@+id/nameText"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="2dp"
-                android:layout_marginBottom="16dp"
+                android:layout_marginStart="7dp"
+                android:layout_marginTop="24dp"
+                android:layout_marginEnd="3dp"
+                android:layout_marginBottom="24dp"
                 android:ellipsize="end"
                 android:maxLines="1"
                 android:text="Name"
-                android:textSize="16sp"
+                android:textSize="17sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/priceText"
@@ -50,8 +50,9 @@
                 android:maxLines="1"
                 android:text="100 ₺"
                 android:textAlignment="viewEnd"
-                android:textSize="16sp"
-                app:layout_constraintBottom_toBottomOf="@+id/nameText"
+                android:textSize="14sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@+id/equivalentPriceText"
                 app:layout_constraintEnd_toStartOf="@+id/constraintLayout"
                 app:layout_constraintHorizontal_weight="5"
                 app:layout_constraintStart_toEndOf="@+id/nameText"
@@ -59,7 +60,7 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/constraintLayout"
-                android:layout_width="65dp"
+                android:layout_width="60dp"
                 android:layout_height="0dp"
                 android:background="@android:color/darker_gray"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -75,13 +76,38 @@
                     android:text="18 Days"
                     android:textAlignment="center"
                     android:textColor="@android:color/white"
-                    android:textSize="14sp"
+                    android:textSize="13sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintStart_toEndOf="@+id/view3"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <View
+                    android:id="@+id/view3"
+                    android:layout_width="1dp"
+                    android:layout_height="0dp"
+                    android:background="?attr/textcolor"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
             </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <TextView
+                android:id="@+id/equivalentPriceText"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="2dp"
+                android:maxLines="1"
+                android:text="100 $"
+                android:textAlignment="viewEnd"
+                android:textSize="12sp"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="@+id/nameText"
+                app:layout_constraintEnd_toEndOf="@+id/priceText"
+                app:layout_constraintStart_toStartOf="@+id/priceText"
+                app:layout_constraintTop_toBottomOf="@+id/priceText" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </androidx.cardview.widget.CardView>
