Notification helper added. Notification added. Notification repeat interval set. Strings added to string resource.

--- a/app/src/main/res/layout/cell_exchange_rate.xml
+++ b/app/src/main/res/layout/cell_exchange_rate.xml
@@ -9,9 +9,9 @@
         android:id="@+id/cellExchangeFlag"
         android:layout_width="36dp"
         android:layout_height="24dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -20,21 +20,28 @@
         android:id="@+id/cellExchangeNameText"
         android:layout_width="60dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:textColor="?attr/textcolor"
-        app:layout_constraintBottom_toBottomOf="@+id/cellExchangeFlag"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/cellExchangeFlag"
-        app:layout_constraintTop_toTopOf="@+id/cellExchangeFlag" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/cellExchangeRateText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="8dp"
         android:textColor="?attr/textcolor"
-        app:layout_constraintBottom_toBottomOf="@+id/cellExchangeNameText"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/cellExchangeNameText"
-        app:layout_constraintTop_toTopOf="@+id/cellExchangeNameText" />
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
