--- a/app/src/main/res/layout/fragment_exchange_rate.xml
+++ b/app/src/main/res/layout/fragment_exchange_rate.xml
@@ -9,13 +9,15 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:clipToPadding="false"
+        android:paddingBottom="80dp">
 
         <TextView
             android:id="@+id/baseExchangeText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:textColor="?attr/textcolor"
             android:textSize="24sp"
@@ -33,6 +35,31 @@
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/baseExchangeText" />
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/last_updated"
+            android:textColor="?attr/textcolor"
+            android:textSize="12sp"
+            app:layout_constraintBottom_toTopOf="@+id/exchangeUpdatedText"
+            app:layout_constraintStart_toStartOf="@+id/exchangeUpdatedText"
+            app:layout_constraintTop_toTopOf="@+id/baseExchangeText" />
+
+        <TextView
+            android:id="@+id/exchangeUpdatedText"
+            android:layout_width="105dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:textColor="?attr/textcolor"
+            android:textSize="12sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="@+id/baseExchangeText"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <include
