--- a/app/src/main/res/layout/fragment_subscription.xml
+++ b/app/src/main/res/layout/fragment_subscription.xml
@@ -23,7 +23,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="2dp"
-                android:text="- optional"
+                android:text="@string/_optional"
                 android:textSize="16sp"
                 android:textColor="?attr/textcolor"
                 app:layout_constraintBottom_toBottomOf="@+id/textView8"
@@ -34,9 +34,9 @@
                 android:id="@+id/cardView2"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:layout_marginStart="4dp"
-                android:layout_marginTop="4dp"
-                android:layout_marginEnd="4dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
                 app:cardBackgroundColor="?attr/cardbackground"
                 app:layout_constraintBottom_toTopOf="@+id/guideline"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -55,7 +55,8 @@
                         android:layout_marginTop="8dp"
                         android:layout_marginEnd="16dp"
                         android:layout_marginBottom="8dp"
-                        android:hint="0.00"
+                        android:hint="@string/_0_00"
+                        android:importantForAutofill="no"
                         android:inputType="numberDecimal"
                         android:maxLength="10"
                         android:maxLines="1"
@@ -107,7 +108,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:text="Name"
+                android:text="@string/name"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:textColor="?attr/textcolor"
@@ -122,22 +123,23 @@
                 android:layout_marginEnd="8dp"
                 android:background="@drawable/rounded_edittext"
                 android:ems="10"
-                android:hint="e.g. Udacity, Spotify etc."
-                android:inputType="textPersonName"
+                android:hint="@string/e_g_udacity_spotify_etc"
+                android:inputType="textShortMessage"
                 android:maxLines="1"
                 android:padding="8dp"
                 android:textColor="?attr/edittextcolor"
                 android:textColorHint="?attr/hintcolor"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/textView2"
-                app:layout_constraintTop_toBottomOf="@+id/textView2" />
+                app:layout_constraintTop_toBottomOf="@+id/textView2"
+                android:importantForAutofill="no" />
 
             <TextView
                 android:id="@+id/textView3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:text="Description"
+                android:text="@string/description"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:textColor="?attr/textcolor"
@@ -149,7 +151,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="2dp"
-                android:text="- optional"
+                android:text="@string/_optional"
                 android:textSize="16sp"
                 android:textColor="?attr/textcolor"
                 app:layout_constraintBottom_toBottomOf="@+id/textView3"
@@ -164,7 +166,7 @@
                 android:layout_marginEnd="8dp"
                 android:background="@drawable/rounded_edittext"
                 android:ems="10"
-                android:hint="e.g. Monthly Sub, Family Plan etc."
+                android:hint="@string/e_g_monthly_sub_family_plan_etc"
                 android:inputType="textShortMessage"
                 android:maxLines="1"
                 android:padding="8dp"
@@ -172,7 +174,8 @@
                 android:textColorHint="?attr/hintcolor"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/textView3"
-                app:layout_constraintTop_toBottomOf="@+id/textView3" />
+                app:layout_constraintTop_toBottomOf="@+id/textView3"
+                android:importantForAutofill="no" />
 
             <View
                 android:id="@+id/view"
@@ -186,7 +189,7 @@
                 android:id="@+id/textView5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Every"
+                android:text="@string/every"
                 android:textSize="18sp"
                 android:textColor="?attr/textcolor"
                 app:layout_constraintBottom_toBottomOf="@+id/frequencyText"
@@ -206,7 +209,9 @@
                 android:textColor="?attr/edittextcolor"
                 android:textColorHint="?attr/hintcolor"
                 app:layout_constraintStart_toEndOf="@+id/textView5"
-                app:layout_constraintTop_toBottomOf="@+id/view" />
+                app:layout_constraintTop_toBottomOf="@+id/view"
+                android:importantForAutofill="no"
+                tools:ignore="LabelFor" />
 
             <Spinner
                 android:id="@+id/frequencyTypeSpinner"
@@ -239,7 +244,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:text="Upcoming Payment"
+                android:text="@string/upcoming_payment"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:textColor="?attr/textcolor"
@@ -256,7 +261,7 @@
                 android:ems="10"
                 android:enabled="true"
                 android:focusable="false"
-                android:hint="e.g. September 1, 2019"
+                android:hint="@string/e_g_september_1_2019"
                 android:inputType="date"
                 android:maxLines="1"
                 android:padding="8dp"
@@ -264,7 +269,8 @@
                 android:textColorHint="?attr/hintcolor"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/textView6"
-                app:layout_constraintTop_toBottomOf="@+id/textView6" />
+                app:layout_constraintTop_toBottomOf="@+id/textView6"
+                android:importantForAutofill="no" />
 
             <View
                 android:id="@+id/view2"
@@ -279,7 +285,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:text="Pick a Color"
+                android:text="@string/pick_a_color"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:textColor="?attr/textcolor"
@@ -314,7 +320,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:text="Payment Method"
+                android:text="@string/payment_method"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:textColor="?attr/textcolor"
@@ -330,7 +336,7 @@
                 android:layout_marginBottom="8dp"
                 android:background="@drawable/rounded_edittext"
                 android:ems="10"
-                android:hint="e.g. Bank Account, Credit Card etc."
+                android:hint="@string/e_g_bank_account_credit_card_etc"
                 android:inputType="textShortMessage"
                 android:maxLines="1"
                 android:padding="8dp"
@@ -339,7 +345,8 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/textView8"
-                app:layout_constraintTop_toBottomOf="@+id/textView8" />
+                app:layout_constraintTop_toBottomOf="@+id/textView8"
+                android:importantForAutofill="no" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
