--- a/app/src/main/res/layout/progress_layout.xml
+++ b/app/src/main/res/layout/progress_layout.xml
@@ -33,7 +33,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Loading..."
+        android:text="@string/loading"
         android:textColor="@color/WhiteSmoke"
         android:textSize="18sp"
         android:textStyle="bold"
