--- a/app/src/main/res/menu/subs_appbar_edit_menu.xml
+++ b/app/src/main/res/menu/subs_appbar_edit_menu.xml
@@ -5,6 +5,6 @@
     <item
         android:id="@+id/appbarSave"
         android:icon="@drawable/ic_save_black_24dp"
-        android:title="Save"
+        android:title="@string/save"
         app:showAsAction="ifRoom"/>
 </menu>
