--- a/app/src/main/res/menu/subs_appbar_insert_menu.xml
+++ b/app/src/main/res/menu/subs_appbar_insert_menu.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
+<menu xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/appbarEdit"
         android:icon="@drawable/ic_edit_black_24dp"
-        android:title="Edit"
-        app:showAsAction="ifRoom"/>
+        android:title="@string/edit"
+        app:showAsAction="ifRoom"
+        tools:ignore="PrivateResource" />
 
     <item
         android:id="@+id/appbarDelete"
         android:icon="@drawable/ic_delete_black_24dp"
-        android:title="Delete"
+        android:title="@string/delete"
         app:showAsAction="ifRoom"/>
 </menu>
