--- a/app/src/main/res/menu/subs_appbar_view_menu.xml
+++ b/app/src/main/res/menu/subs_appbar_view_menu.xml
@@ -5,6 +5,6 @@
     <item
         android:id="@+id/appbarDelete"
         android:icon="@drawable/ic_delete_black_24dp"
-        android:title="Delete"
+        android:title="@string/delete"
         app:showAsAction="ifRoom"/>
 </menu>
