--- a/app/src/main/res/menu/subs_appbar_viewrate_menu.xml
+++ b/app/src/main/res/menu/subs_appbar_viewrate_menu.xml
@@ -4,6 +4,6 @@
     <item
         android:id="@+id/viewrateRefresh"
         android:icon="@drawable/ic_refresh_black_24dp"
-        android:title="Refresh"
+        android:title="@string/refresh"
         app:showAsAction="ifRoom"/>
 </menu>
