--- a/app/src/main/res/layout/cell_exchange_rate.xml
+++ b/app/src/main/res/layout/cell_exchange_rate.xml
@@ -14,7 +14,8 @@
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="ContentDescription" />
 
     <TextView
         android:id="@+id/cellExchangeNameText"
