--- a/app/src/main/res/layout/fragment_subscription_view.xml
+++ b/app/src/main/res/layout/fragment_subscription_view.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:clipToPadding="false"
-        android:paddingBottom="80dp"> <!-- TODO change -->
+        android:paddingBottom="80dp">
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView2"
@@ -221,6 +221,21 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/paidInTotalTextView"
             app:layout_constraintTop_toBottomOf="@+id/paymentMethodTextView" />
+
+        <Button
+            android:id="@+id/alarmButton"
+            android:drawableStart="@drawable/ic_notifications_black_24dp"
+            android:drawablePadding="8dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:backgroundTint="?attr/textcolor"
+            android:text="@string/set_alarm"
+            android:textAllCaps="false"
+            android:textColor="?attr/backgroundcolor"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/paymentMethodViewText" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
